2016-10-19  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.37 released.

2016-10-19  Carl Hetherington  <cth@carlh.net>

	* Fix various problems with 3D DCP creation
	from 3D DCP and 3D-alernate-frame sources.

2016-10-18  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2016-10-17  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.36 released.

2016-10-17  c.hetherington  <cth@carlh.net>

	* Bump libdcp for fix to corrupted audio analyses
	under some locales (#974).

2016-10-15  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.35 released.

2016-10-14  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.34 released.

2016-10-12  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.33 released.

2016-10-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.32 released.

2016-10-10  Carl Hetherington  <cth@carlh.net>

	* Fix incorrect import of multi-reel DCPs with subtitles.

2016-10-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.31 released.

2016-10-08  Carl Hetherington  <cth@carlh.net>

	* Fix overlapping burnt-in subtitles in some cases (#959).

2016-10-07  Carl Hetherington  <cth@carlh.net>

	* Fix XML subtitle output in some cases.

2016-10-06  c.hetherington  <cth@carlh.net>

	* Allow selection of CPL in multi-CPL DCPs (#733).

2016-10-05  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2016-10-04  c.hetherington  <cth@carlh.net>

	* Fix error when examining files with embedded subtitles in some cases (#969).

2016-10-04  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.30 released.

2016-10-03  Carl Hetherington  <cth@carlh.net>

	* Fix crash on make DCP if there are old audio analysis files.

	* Updated zh_CN translation from 刘汉源.

2016-10-03  Carl Hetherington  <cth@carlh.net>

	* Version 2.9.29 released.

2016-10-03  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Version 2.9.28 released.
