@@ -1,3 +1,8 @@
+2016-10-24  Carl Hetherington  <cth@carlh.net>
+
+	* Fix various problems with 3D alternate-frame
+	sources.
+
 2016-10-19  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.9.37 released.
